<resources>
    <string name="app_name">5 рецептов шашлыка из свинины</string>
    <string name="btn1_text"><b>Пряный шашлык из свинины</b></string>
    <string name="btn2_text"><b>Шашлык из свинины с помидорами</b></string>
    <string name="btn3_text"><b>Шашлык из свинины в белом вине</b></string>
    <string name="btn4_text"><b>Шашлык из свинины с зеленью</b></string>
    <string name="btn5_text"><b>Шашлык из свинины в маринаде из гранатового сока</b></string>
    <string name="description1">image1</string>
    <string name="description2">image2</string>
    <string name="description3">image3</string>
    <string name="description4">image4</string>
    <string name="description5">image5</string>
    <string name="text1">
        <b>Ингредиенты:</b> свиной ошеек - 1.5 кг, лук - 400 г, лимон  -1 шт., чили - 1 шт., растительное масло - 2 ст.л., минеральная вода - 300 мл, красный сладкий молотый перец, черный молотый перец, сухой орегано, соль - по вкусу.
        \n\n
        <b>Приготовление:</b> Мясо нарезать крупными брусочками, а половину лука – кольцами толщиной 1 см. В отдельную посуду натереть на терке оставшийся лук, выдавить сок лимона, положить мелко нарезанный перец чили. Влить минеральную воду,  масло, добавить специи.
        \n\n
        Маринадом залить мясо с луком и половинками выжатого лимона. Перемешать, накрыть крышкой и оставить на 2 часа мариноваться. Нанизать на шампуры свинину с луком и жарить над углями до готовности мяса.
    </string>
    <string name="text2">
        <b>Ингредиенты:</b> свиная шейка - 1.8 кг, лук - 2 шт., черный молотый перец - 1 ч.л., помидоры - 200 г, соль - 1 ч.л.
        \n\n
        <b>Приготовление:</b> Мясо нарезать не слишком крупными кусками (около 5 см). Лишний жир срезать. С нижней стороны помидора сделать неглубокий крестообразный надрез, опустить на минуту в кипяток, а затем снять кожицу. Нарезать как можно мельче.
        \n\n
        Репчатый лук порезать полукольцами, добавить в него морской соли и пожать руками, чтобы он дал сок. Добавить к мясу лук и помидоры. Добавить перец, хорошо перемешать, накрыть и поставить мариноваться на 2-3 часа. Замаринованную свинину равномерно нанизывать на шампуры.
        \n\n
        Угли разжечь и довести до состояния, когда они покроются пеплом, но внутри останутся горячими. Жарить шашлыки, часто поворачивая шампуры, чтобы они со всех сторон равномерно прожарились. Когда они хорошо подрумянятся со всех сторон, они, скорее всего, уже готовы. Проверить готовность можно, разрезав кусочек мяса - сок должен быть прозрачным.
    </string>
    <string name="text3">
        <b>Ингредиенты:</b> 2 кг свиной шеи, 1 стакан белого сухого вина, 1 ч. ложка кориандра, черный перец горошком, лавровый лист, черный молотый перец, соль.
        \n\n
        <b>Приготовление:</b> Свиную шею режем на порционные кусочки. Резать следует так, чтобы в каждом кусочке мяса присутствовала прослойка жира. От этого шашлык будет сочнее и вкуснее. Мясо укладываем в кастрюлю, приправляем специями и заливаем белым сухим вином. Все тщательно перемешиваем и убираем в прохладное на несколько часов. Время от времени не забываем его перемешивать.
        \n\n
        Перед приготовлением солим шашлык и разводим огонь. Подготовив угли, нанизываем мясо на шампуры и жарим шашлык. Во время приготовления поливаем мясо получившимся маринадом из сухого вина. Готовим шашлык  до образования румяной корочки.
    </string>
    <string name="text4">
        <b>Ингредиенты:</b> свинина - 1 кг, лук репчатый - 0.5 кг, уксус - 6% - 6 ст.л., черный молотый перец, соль - по вкусу, зеленый лук и кинза - 1 пучок.
        \n\n
        <b>Приготовление:</b> Мясо желательно брать от ноги или спины туши (почечная часть), помыть под струей холодной воды, нарезать некрупными порционными кусками. Репчатый лук нарезать кольцами. Мясо посолить, поперчить и уложить в эмалированную посуду слоями, переложив каждый слой луком.
        \n\n
        Уксус развести в 0,5 литра холодной воды и полить раствором мясо. Посуду закрыть крышкой и поставить в прохладное место на 2-5 часов. Затем нанизать на шампуры так, чтобы между кусками оставалось пространство. Готовить 10-12 минут, поворачивая вокруг оси каждые 1-2 минуты.
        \n\n
        При подаче посыпать сверху мелко нарезанным зеленым луком и зеленью кинзы. К столу рекомендуется подать вместе с луковым или томатным соусом.
    </string>
    <string name="text5">
        <b>Ингредиенты:</b> свиная шея – 1.5 - 2 кг, свежий гранатовый сок – 1 стакан, репчатый лук, помидоры или сладкий перец - 4 или 2 шт. (по желанию), гвоздика, зелень петрушки, базилика, крупная соль, черный молотый перец.
        \n\n
        <b>Приготовление:</b> Мясо разрезать на порционные куски и уложить его первым слоем на дно эмалированной кастрюли, посыпать специями. Нарезать кольцами лук и выложить на мясо вторым слоем. Мелко порубить зелень и посыпать ею мясо с луком. Затем выложить следующий слой мяса, слой лука, посыпать зеленью и специями и так до тех пор, пока мясо не закончится.
        \n\n
        Сверху положить цветки гвоздики (4-5 штук), залить гранатовым соком и поставить в прохладное место на четыре часа. Каждый час необходимо перемешивать. За полчаса до начала приготовления мясо нужно посолить. Нанизав на шампур, чередуя с помидорами, жарить на углях.
    </string>
</resources>
