<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eceff1"
    tools:context="com.example.s3rg3y.finalproject.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button1"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:onClick="btn1"
                android:text="@string/btn1_text" />

            <Button
                android:id="@+id/button2"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:onClick="btn2"
                android:text="@string/btn2_text"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button3"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:onClick="btn3"
                android:text="@string/btn3_text" />

            <Button
                android:id="@+id/button4"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:onClick="btn4"
                android:text="@string/btn4_text"/>

            <Button
                android:id="@+id/button5"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:onClick="btn5"
                android:text="@string/btn5_text" />
            </LinearLayout>

    </ScrollView>

</RelativeLayout>
